--- a/public/back/src/plugins/timedropper/timedropper.css
+++ b/public/back/src/plugins/timedropper/timedropper.css
@@ -69,6 +69,7 @@
 }
 .td-init .td-deg {
     -webkit-animation: slide 1s cubic-bezier(.7, 0, .175, 1) 1.2s infinite;
+    animation: slide 1s cubic-bezier(.7, 0, .175, 1) 1.2s infinite;
 }
 .td-svg {
     position: absolute;
