--- a/public/back/src/styles/style.css
+++ b/public/back/src/styles/style.css
@@ -20,6 +20,7 @@ html {
 }
 input[type="submit"] {
 	-webkit-appearance: none;
+            appearance: none;
 }
 *, *:after, *:before {
 	box-sizing: border-box;
