--- a/public/datatable/css/jquery.dataTables_themeroller.css
+++ b/public/datatable/css/jquery.dataTables_themeroller.css
@@ -32,7 +32,7 @@ table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
 table.dataTable thead .sorting {
   cursor: pointer;
-  *cursor: hand;
+  cursor: hand;
 }
 table.dataTable thead th div.DataTables_sort_wrapper {
   position: relative;
@@ -302,7 +302,7 @@ table.dataTable td {
 .dataTables_wrapper {
   position: relative;
   clear: both;
-  *zoom: 1;
+  zoom: 1;
   zoom: 1;
 }
 .dataTables_wrapper .dataTables_length {
@@ -333,7 +333,7 @@ table.dataTable td {
   text-align: center;
   text-decoration: none !important;
   cursor: pointer;
-  *cursor: hand;
+  cursor: hand;
   color: #333 !important;
   border: 1px solid transparent;
 }
@@ -384,7 +384,7 @@ table.dataTable td {
   clear: both;
 }
 .dataTables_wrapper .dataTables_scrollBody {
-  *margin-top: -1px;
+  margin-top: -1px;
   -webkit-overflow-scrolling: touch;
 }
 .dataTables_wrapper .ui-widget-header {
