--- a/public/back/src/plugins/dropzone/src/dropzone.css
+++ b/public/back/src/plugins/dropzone/src/dropzone.css
@@ -426,6 +426,7 @@
 	margin-left: -40px;
 	background: rgba(255, 255, 255, 0.9);
 	-webkit-transform: scale(1);
+    transform: scale(1);
 	border-radius: 8px;
 	overflow: hidden;
 }
